--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "express-validator": "^6.14.2",
+    "helmet": "^6.0.1",
     "http-errors": "~1.6.3",
     "mongoose": "^6.8.2",
     "morgan": "~1.9.1",
