--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "async": "^3.2.4",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^16.0.3",
     "express": "~4.16.1",
     "express-validator": "^6.14.2",
     "helmet": "^6.0.1",
